v 0.4 - Xenomai
------
-- Total rewrite for Xenomai integration
-- gpio.c/.h: support for interrupts and safe multiple access to registers 
	      now is a more general intermediate layer for gpio modules
-- platform_io.c/.h  Added high-level functions to control the basic gpio_devices (leds, buttons,...)


v 0.34
------
-- hwservo.c/.h: Servo core functionality to move in a bigger range from the standard (1-2ms). 
-- robex : Adapted servo example
-- openloop_motors.c/.h: Comments addlsed. Fix oloopenc_read_pulsecount read positive/negative pulses
-- gpio_maps.h: Added address for mapping of an 8 bit core for the FPGA_GPIO port 
-- robotdevices.h: Cleaned
-- i2ctools.c/.h: Added functionality for thread safe (pthread mutex) i2c calls. 


V 0.33
------
-- xilinx_lcd.c: Fix: when writing to lines 1 and 2, one character was missing


V 0.32 
------
-- Final code for the v2 platform. 

