@@ -1,0 +1,1 @@
+- To create debug versions: BUILD_TYPE = DEBUG
